Switched to the OpenJDK version of Nashorn